--- a/css/layout_original.css
+++ b/css/layout_original.css
@@ -66,15 +66,14 @@ header .banner-text h1 {
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #fff;
+   color: #A8A8A8;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
-   color: #aaf6f8;
-   font-weight: bold;
+   color: #fff;
 }
 header .banner-text hr {
    width: 60%;
@@ -180,7 +179,7 @@ ul#nav li a {
 }
 
 ul#nav li a:active { background-color: transparent !important; }
-ul#nav li.current a { color: #11ABB0; } /*color links header index*/
+ul#nav li.current a { color: #F06000; }
 
 
 /* ------------------------------------------------------------------ */
@@ -188,11 +187,9 @@ ul#nav li.current a { color: #11ABB0; } /*color links header index*/
 /* ------------------------------------------------------------------ */
 
 #about {
-   background: #16191f;
+   background: #2B2B2B;
    padding-top: 96px;
    padding-bottom: 66px;
-   background-size: cover !important;
-   -webkit-background-size: cover !important; 
    overflow: hidden;
 }
 
@@ -210,9 +207,9 @@ ul#nav li.current a { color: #11ABB0; } /*color links header index*/
 }
 #about .profile-pic {
    position: relative;
-   width: 200px;
-   height: 200px;
-   border-radius:100%;
+   width: 120px;
+   height: 120px;
+   border-radius: 100%;
 }
 #about .contact-details { width: 41.66667%; }
 #about .download {
@@ -222,8 +219,7 @@ ul#nav li.current a { color: #11ABB0; } /*color links header index*/
 #about .main-col { padding-right: 5%; }
 #about .download .button {
    margin-top: 6px;
-   background: #11ABB0; /* color boton download, naranja */
-   color: #2B2B2B;
+   background: #444;
 }
 #about .download .button:hover {
    background: #fff;
@@ -240,18 +236,17 @@ ul#nav li.current a { color: #11ABB0; } /*color links header index*/
 /* ------------------------------------------------------------------ */
 
 #resume {
-   background: #1c1d21;
+   background: #fff;
    padding-top: 90px;
    padding-bottom: 72px;
    overflow: hidden;
 }
 
-#resume a, #resume a:visited  { color: #fff; }
-#resume a:hover, #resume a:focus { color: #11ABB0; }
+#resume a, #resume a:visited  { color: #11ABB0; }
+#resume a:hover, #resume a:focus { color: #313131; }
 
 #resume h1 {
    font: 18px/24px 'opensans-bold', sans-serif;
-   color: #fff;
    text-transform: uppercase;
    letter-spacing: 1px;
 }
@@ -261,11 +256,6 @@ ul#nav li.current a { color: #11ABB0; } /*color links header index*/
 }
 #resume h3 {
    font: 25px/30px 'opensans-bold', sans-serif;
-   color: #fff;
-}
-
-#resume h3 a{
-   text-decoration: underline;
 }
 
 #resume .header-col { padding-top: 9px; }
@@ -981,7 +971,7 @@ footer .social-links li {
     margin: 0;
     padding: 0;
     margin-left: 42px;
-    color: blue;
+    color: #F06000;
 }
 
 footer .social-links li:first-child { margin-left: 0; }
@@ -1014,66 +1004,3 @@ footer .social-links li:first-child { margin-left: 0; }
 }
 #go-top a:hover { background-color: #0F9095; }
 
-/* ------------------------------------------------------------------ */
-/* j. Blog
-/* ------------------------------------------------------------------ */
-
-
-#blog {
-   background: #2B2B2B;
-   padding-top: 90px;
-   padding-bottom: 72px;
-   overflow: hidden;
-   text-align: center;
-}
-
-#blog a, #blog a:visited  { color: #fff; }
-#blog a:hover, #blog a:focus { color: #11ABB0; }
-
-#blog h1 {
-   font: 18px/24px 'opensans-bold', sans-serif;
-   color: #fff;
-   /*text-transform: uppercase;*/
-   letter-spacing: 1px;
-}
-#blog h1 span {
-   border-bottom: 2px solid #fff;
-   padding-bottom: 6px;
-}
-#blog h3 {
-   font: 25px/30px 'opensans-bold', sans-serif;
-   color: #fff;
-}
-
-#blog .header-col { padding-top: 9px; }
-#blog .main-col { padding-right: 10%; }
-
-.education, .work {
-   margin-bottom: 48px;
-   padding-bottom: 24px;
-   border-bottom: 1px solid #E8E8E8;
-}
-#blog .info {
-   color: #8d969f;
-   margin-bottom: 18px;
-   margin-top: 9px;
-}
-#blog .info span {
-   margin-right: 5px;
-   margin-left: 5px;
-}
-#blog .date {
-   font: 15px/24px 'opensans-regular', sans-serif;
-   margin-top: 6px;
-   color: #b2bbc4;
-}
-
-#blog .text {
-    text-align: justify;
-}
-
-#blog hr {
-   border-color: #11ABB0;
-   margin: 18px auto 24px auto;
-   border-style: dashed;
-}
