--- a/css/styles.css
+++ b/css/styles.css
@@ -572,6 +572,11 @@ progress {
 .list-inline-item {
   display: inline-block;
 }
+
+.list-inline-item:hover {
+    color: #BD5D38;
+}
+
 .list-inline-item:not(:last-child) {
   margin-right: 0.5rem;
 }
@@ -10969,4 +10974,45 @@ section.resume-section .resume-section-content {
     padding-top: 5rem;
     padding-bottom: 5rem;
   }
+}
+
+.image-link img {
+  transition: filter 0.3s ease;
+}
+
+.image-link img:hover {
+  filter: drop-shadow(0 0 10px #bd5d38);
+}
+
+.org-img {
+  max-width: 100px;
+  border: 3px solid #9b9b9b;
+}
+
+a {
+    position: relative; /* Necesario para posicionar el tooltip */
+}
+
+/* Tooltip oculto por defecto */
+a .tooltip {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: -40px; /* Posición encima del enlace */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #bd5d38; /* Color de fondo por defecto */
+    color: #fff; /* Color del texto */
+    padding: 5px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    font-size: 14px;
+    transition: opacity 0.3s;
+    z-index: 10;
+}
+
+/* Mostrar el tooltip al pasar el cursor */
+a:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
 }
