--- a/css/styles.css
+++ b/css/styles.css
@@ -11052,3 +11052,51 @@ a:hover .tooltip {
     order: 3; /* Show description last */
   }
 }
+
+/* Popup */
+.popup-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+.popup {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    position: relative;
+    width: 800px;
+    max-height: 95vh;
+    max-width: 95vw;
+    overflow-y: auto;
+    text-align: center;
+    z-index: 10000;
+}
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+}
+.disable-clicks {
+    pointer-events: none;
+}
+
+.popup img {
+    max-width: 90%;
+    height: auto;
+}
+
+/* Responsive Design for Mobile */
+@media (max-width: 768px) {
+    .popup {
+        width: 95%;
+    }
+}
